# freezefs

./: .gitignore  LICENSE  README.md  pyproject.toml  tests
freezefs/: __main__.py  archive.py  ffsextract.py  ffsmount.py
src/: freezeFS.py  vfsfrozen.py
test/: test.py
tests/: cleantest.bat  runtest.bat  test.py
